--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
      -->
     <link rel="icon" href="./assets/images/icon.jpg" />
 		<title>Braden Barlean Portfolio</title>
-    <meta name="description" content="A portfolio template for the Unemployables community.">
+    <meta name="description" content="Braden Barlean's Portfolio">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
 		<link rel="stylesheet" href="./css/layout.css">
@@ -28,10 +28,8 @@
     <!-- NAVBAR -->
     <div class="navbar">
       <a class="nav-title-link" href="./index.html">
-        <!-- TODO - Change the "Portfolio Title" to whatever you want displayed in the top left -->
-        <span class="nav-title">Portfolio Title</span>
-         <!-- TODO - Change the email after 'mailto:' to your email address for contact -->
-        <a class="button" href="mailto:whitevans.eth@gmail.com">
+        <span class="nav-title">Braden Barlean</span>
+        <a class="button" href="mailto:bradenbarlean@gmail.com">
           <span class="button-text">Contact Me</span>
         </a>
       </a>
