--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
      -->
     <link rel="icon" href="./assets/images/icon.jpg" />
 		<title>Braden Barlean Portfolio</title>
-    <meta name="description" content="Braden Barlean's Portfolio">
+    <meta name="description" content="Braden's Portfolio">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
 		<link rel="stylesheet" href="./css/layout.css">
@@ -48,9 +48,7 @@
             - Change the number to point to your Unemployable & replace the OpenSea link with your own
             - If you aren't using an Unemployable as your image, remove the entire "a" element
           -->
-          <img src="./assets/images/1311.png" class="portfolio-header-image">
-          <a class="no-underline" target="_blank" href="https://opensea.io/assets/0xe0be388ab81c47b0f098d2030a1c9ef190691a8a/1311">
-            <span class="image-caption">Unemployables #1311</span>
+          <img src="./assets/images/kenya.jpg" class="portfolio-header-image">
           </a>
         </div>
 
@@ -63,8 +61,8 @@
           -->
         <div id="portfolio-header-text-container">
             <div class="header-text">
-              <span class="main-title">Hey, I'm @ndoherty_eth.</span>
-              <div class="body-text">I’m a freelance designer and developer who aims to help other creatives build out their portfolios, skillset, and businesses.</div>
+              <span class="main-title">Hey, I'm Braden Barlean.</span>
+              <div class="body-text">I’m a biomedical engineer with a passion within robotic systems.</div>
             </div>
             <a class="button" id="my-work-link">
               <span class="button-text">Check out my projects</span> 
