--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
           -->
         <div id="portfolio-header-text-container">
             <div class="header-text">
-              <span class="main-title">Hey, I'm Braden Barlean.</span>
-              <div class="body-text">I’m a biomedical engineer with a passion within robotic systems.</div>
+              <span class="main-title">I am Braden Barlean.</span>
+              <div class="body-text">I am a biomedical engineer with a passion for saving lives, and I am seeking opportunities to gain experience in professional climates within medical device design to get a more comprehensive understanding of the full product lifecycle.</div>
             </div>
             <a class="button" id="my-work-link">
               <span class="button-text">Check out my projects</span> 
@@ -81,8 +81,8 @@
       <div id="about-section">
         <span class="subheader-text">My Background / About Me</span>
         <div class="about-section-content">
-          <div class="body-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Tristique risus nec feugiat in fermentum. Sed id semper risus in hendrerit gravida. Placerat duis ultricies lacus sed. Id neque aliquam vestibulum morbi blandit cursus risus. Elit pellentesque habitant morbi tristique senectus et netus et. Elementum tempus egestas sed sed risus pretium quam. Nibh ipsum consequat nisl vel pretium lectus quam id leo. Vitae congue mauris rhoncus aenean vel elit.</div>
-          <div class="body-text">Vitae justo eget magna fermentum. Imperdiet nulla malesuada pellentesque elit eget gravida. Aliquet nec ullamcorper sit amet. Aliquet sagittis id consectetur purus. Ac tortor dignissim convallis aenean. Enim neque volutpat ac tincidunt vitae. Lobortis feugiat vivamus at augue. Platea dictumst vestibulum rhoncus est pellentesque elit ullamcorper. Viverra orci sagittis eu volutpat. Massa tincidunt nunc pulvinar sapien et ligula. Donec enim diam vulputate ut.</div>
+          <div class="body-text">I am set to graduate with a Master of Science in Engineering from Johns Hopkins University's Center for Bioengineering Innovation and Design in May 2023. While pursuing my master's degree, I worked in the United States to develop a more efficient incontinence management systems for geriatric patents both in nursing homes and at home. This project started with clinical needs identification and validation and then transitioned to product development. I also have been working globally with ARISE, where we are working to expand laparoscopy to LMICs through our suite of surgical education products. I have been fortunate enough to have been exposed to and gain experience in the full product lifecycle of a medical device while attending Johns Hopkins.</div>
+          <div class="body-text">During my undergraduate years, I worked in a biomaterials laboratory where I was trying to occlude cerebral aneurysms using pentenoate-functionalized hyaluronic acid hydrogels. While I was working on and had a great interest in biomaterials sciences, I was also extremely interested in robotics and 3D printing. This led me to my school's Biomedical Engineering Society, where I had the opportunity to develop a robotic prosthetic hand.</div>
         </div>
       </div>
 
