updated bottom icons

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       <div id="about-section">
         <span class="subheader-text">My Background / About Me</span>
         <div class="about-section-content">
-          <div class="body-text">I am set to graduate with a Master of Science in Engineering from Johns Hopkins University's Center for Bioengineering Innovation and Design in May 2023. While pursuing my master's degree, I worked in the United States to develop a more efficient incontinence management systems for geriatric patents both in nursing homes and at home. This project started with clinical needs identification and validation and then transitioned to product development. I also have been working globally with ARISE, where we are working to expand laparoscopy to LMICs through our suite of surgical education products. I have been fortunate enough to have been exposed to and gain experience in the full product lifecycle of a medical device while attending Johns Hopkins.</div>
+          <div class="body-text">I am set to graduate with a Master of Science in Engineering from Johns Hopkins University's Center for Bioengineering Innovation and Design in May 2023. While pursuing my master's degree, I worked in the United States to develop a more efficient incontinence management systems for geriatric patents both in nursing homes and at home. This project started with clinical needs identification and validation and then transitioned to product development. I also have been working globally with ARISE, where we are working to expand laparoscopy to LMICs through our suite of surgical education products.</div>
           <div class="body-text">During my undergraduate years, I worked in a biomaterials laboratory where I was trying to occlude cerebral aneurysms using pentenoate-functionalized hyaluronic acid hydrogels. While I was working on and had a great interest in biomaterials sciences, I was also extremely interested in robotics and 3D printing. This led me to my school's Biomedical Engineering Society, where I had the opportunity to develop a robotic prosthetic hand.</div>
         </div>
       </div>
@@ -158,23 +158,23 @@
 
         This should be the same across all pages.
       -->
-      <a class="icon-link" target="_blank" href="https://twitter.com/whitevans_eth">
-        <image src="./assets/icons/instagram.svg" class="footer-icon"/>
+      <a class="icon-link" target="_blank" href="https://www.linkedin.com/in/bradenbarlean/">
+        <image src="./assets/icons/linkedin.svg" class="footer-icon"/>
       </a>
       <!-- 
         TODO - Change href to your Twitter account (can also delete entire "a" element if no Twitter) 
       
         This should be the same across all pages.
       -->
-      <a class="icon-link" target="_blank" href="https://twitter.com/whitevans_eth">
-        <image src="./assets/icons/twitter.svg" class="footer-icon"/>
+      <a class="icon-link" target="_blank" href="https://www.youtube.com/@bradenbarlean">
+        <image src="./assets/icons/youtube.svg" class="footer-icon"/>
       </a>
       <!-- 
         TODO - Change the email after "mailto" to your contact email 
       
         This should be the same across all pages.
       -->
-      <a class="icon-link" href="mailto:whitevans.eth@gmail.com">
+      <a class="icon-link" href="mailto:bradenbarlean@gmail.com">
         <image src="./assets/icons/mail.svg" class="footer-icon"/>
       </a>
     </div>
