--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         This should be the same across all pages.
       -->
       <a class="icon-link" target="_blank" href="https://www.linkedin.com/in/bradenbarlean/">
-        <image src="./assets/icons/linkedin.svg" class="footer-icon"/>
+        <image src="./assets/icons/linkedin2.svg" class="footer-icon"/>
       </a>
       <!-- 
         TODO - Change href to your Twitter account (can also delete entire "a" element if no Twitter) 
@@ -167,7 +167,7 @@
         This should be the same across all pages.
       -->
       <a class="icon-link" target="_blank" href="https://www.youtube.com/@bradenbarlean">
-        <image src="./assets/icons/youtube.svg" class="footer-icon"/>
+        <image src="./assets/icons/youtube2.svg" class="footer-icon"/>
       </a>
       <!-- 
         TODO - Change the email after "mailto" to your contact email 
