added github link

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           -->
         <div id="portfolio-header-text-container">
             <div class="header-text">
-              <span class="main-title">I am Braden Barlean.</span>
+              <span class="main-title">Translating experience to innovation, I am Braden Barlean.</span>
               <div class="body-text">I am a biomedical engineer with a passion for saving lives, and I am seeking opportunities to gain experience in professional climates within medical device design to get a more comprehensive understanding of the full product lifecycle.</div>
             </div>
             <a class="button" id="my-work-link">
@@ -174,8 +174,8 @@
       
         This should be the same across all pages.
       -->
-      <a class="icon-link" href="mailto:bradenbarlean@gmail.com">
-        <image src="./assets/icons/mail.svg" class="footer-icon"/>
+      <a class="icon-link" href="https://github.com/Braden5790">
+        <image src="./assets/icons/github.svg" class="footer-icon"/>
       </a>
     </div>
 
