updated github logo

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
         This should be the same across all pages.
       -->
       <a class="icon-link" href="https://github.com/Braden5790">
-        <image src="./assets/icons/github.svg" class="footer-icon"/>
+        <image src="./assets/icons/github2.svg" class="footer-icon"/>
       </a>
     </div>
 
