updated project names and bio

--- a/index.html
+++ b/index.html
@@ -81,15 +81,15 @@
       <div id="about-section">
         <span class="subheader-text">My Background / About Me</span>
         <div class="about-section-content">
-          <div class="body-text">I am set to graduate with a Master of Science in Engineering from Johns Hopkins University's Center for Bioengineering Innovation and Design in May 2023. While pursuing my master's degree, I worked in the United States to develop a more efficient incontinence management systems for geriatric patents both in nursing homes and at home. This project started with clinical needs identification and validation and then transitioned to product development. I also have been working globally with ARISE, where we are working to expand laparoscopy to LMICs through our suite of surgical education products.</div>
-          <div class="body-text">During my undergraduate years, I worked in a biomaterials laboratory where I was trying to occlude cerebral aneurysms using pentenoate-functionalized hyaluronic acid hydrogels. While I was working on and had a great interest in biomaterials sciences, I was also extremely interested in robotics and 3D printing. This led me to my school's Biomedical Engineering Society, where I had the opportunity to develop a robotic prosthetic hand.</div>
+          <div class="body-text">I am set to graduate with a Master of Science in Engineering from Johns Hopkins University's Center for Bioengineering Innovation and Design in May 2023. While pursuing my master's degree, I worked in the United States to develop a more efficient incontinence management systems for geriatric patents both in nursing homes and at home. This project started with clinical needs identification and validation and then transitioned to product development. I also have been working in the global health space with ARISE (Accelerated, Realistic, Intelligent Simulation for Surgical Education), where we are working to expand laparoscopy, minimally invasive surgery, in low- and middle-income countries through our suite of surgical education products. The ARISE platform is designed to empower surgeons with the skills and knowledge they need to perform life-saving laparoscopic surgeries.</div>
+          <div class="body-text">During my undergraduate years, I worked in a biomaterials laboratory where I was trying to occlude cerebral aneurysms using pentenoate-functionalized hyaluronic acid hydrogels. While I was working on and had a great interest in biomaterials sciences, I was also extremely interested in robotics and 3D printing. This led me to my school's Biomedical Engineering Society, where I had the opportunity to develop a robotic prosthetic hand. This robotic prosthetic is currently being used to teach students about coding, 3D printing, and bioelectricity.</div>
         </div>
       </div>
 
       <!-- PROJECTS / MY WORK SECTION -->
       <div id="my-work-section">
         <!-- TODO - Change the subheader-text to whatever you want the Projects section header to say -->
-        <span class="subheader-text">My Work / My Projects</span>
+        <span class="subheader-text">From Concept to Completion</span>
 
         <div class="projects-container">
           <!-- 
@@ -117,7 +117,7 @@
           <div class="project-card">
             <img src="./assets/images/desktop.jpeg" class="project-image">
             <div class="project-card-text-container">
-              <div class="subheader-text project-title">Project Name</div>
+              <div class="subheader-text project-title">ARISE: Accelerated, Realistic, Intelligent Simulation for Surgical Education</div>
               <div class="body-text project-card-text">Elit pellentesque habitant morbi tristique senectus et netus et. Elementum tempus egestas sed sed risus pretium quam. Nibh ipsum consequat nisl vel pretium</div>
             </div>
             <a class="button" href="./project-pages/project-template.html">
@@ -128,7 +128,7 @@
           <div class="project-card">
             <img src="./assets/images/code.jpeg" class="project-image">
             <div class="project-card-text-container">
-              <div class="subheader-text project-title">Project Name</div>
+              <div class="subheader-text project-title">Cerebral Aneurysm Occlusion</div>
               <div class="body-text project-card-text">Elit pellentesque habitant morbi tristique senectus et netus et. Elementum tempus egestas sed sed risus pretium quam. Nibh ipsum consequat nisl vel pretium</div>
             </div>
             <a class="button" href="./project-pages/project-template.html">
@@ -139,7 +139,7 @@
           <div class="project-card">
             <img src="./assets/images/sketchbook.jpeg" class="project-image">
             <div class="project-card-text-container">
-              <div class="subheader-text project-title">Super Long Project Name That Should be Hidden</div>
+              <div class="subheader-text project-title">Low-Cost Ventilation</div>
               <div class="body-text project-card-text">Elit pellentesque habitant morbi tristique senectus et netus et. Elementum tempus egestas sed sed risus pretium quam. Nibh ipsum consequat nisl vel pretium</div>
             </div>
             <a class="button" href="./project-pages/project-template.html">
