changes to the project pages

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             <img src="./assets/images/desktop.jpeg" class="project-image">
             <div class="project-card-text-container">
               <div class="subheader-text project-title">ARISE: Surgical Education</div>
-              <div class="body-text project-card-text">Elit pellentesque habitant morbi tristique senectus et netus et. Elementum tempus egestas sed sed risus pretium quam. Nibh ipsum consequat nisl vel pretium</div>
+              <div class="body-text project-card-text">ARISE is a non-profit start-up that I co-founded to revolutionize surgical education through our suite of surgical training products, LaparoscopiX. Through scalable simulation and an AI mentor-based platform ARISE provides fundamental skills acquisition to expert-level training for surgical trainees.</div>
             </div>
             <a class="button" href="./project-pages/project-template.html">
               <span class="button-text">Read More</span>
@@ -129,7 +129,7 @@
             <img src="./assets/images/code.jpeg" class="project-image">
             <div class="project-card-text-container">
               <div class="subheader-text project-title">Cerebral Aneurysm Occlusion</div>
-              <div class="body-text project-card-text">Elit pellentesque habitant morbi tristique senectus et netus et. Elementum tempus egestas sed sed risus pretium quam. Nibh ipsum consequat nisl vel pretium</div>
+              <div class="body-text project-card-text">Coming Soon</div>
             </div>
             <a class="button" href="./project-pages/project-template.html">
               <span class="button-text">Read More</span>
@@ -140,7 +140,7 @@
             <img src="./assets/images/sketchbook.jpeg" class="project-image">
             <div class="project-card-text-container">
               <div class="subheader-text project-title">COVID-19: Low-Cost Ventilator</div>
-              <div class="body-text project-card-text">Elit pellentesque habitant morbi tristique senectus et netus et. Elementum tempus egestas sed sed risus pretium quam. Nibh ipsum consequat nisl vel pretium</div>
+              <div class="body-text project-card-text">Coming Soon</div>
             </div>
             <a class="button" href="./project-pages/project-template.html">
               <span class="button-text">Read More</span>
