activated new arise page

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
               <div class="subheader-text project-title">ARISE: Surgical Education</div>
               <div class="body-text project-card-text">ARISE is a non-profit start-up that I co-founded to revolutionize surgical education through our suite of surgical training products, LaparoscopiX. Through scalable simulation and an AI mentor-based platform ARISE provides fundamental skills acquisition to expert-level training for surgical trainees.</div>
             </div>
-            <a class="button" href="./project-pages/project-template.html">
+            <a class="button" href="./project-pages/arise.html">
               <span class="button-text">Read More</span>
               <image src="./assets/icons/arrow-right.svg" class="right-arrow-icon"/>
             </a>
