--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             - Change the number to point to your Unemployable & replace the OpenSea link with your own
             - If you aren't using an Unemployable as your image, remove the entire "a" element
           -->
-          <img src="./assets/images/kenya.jpg" class="portfolio-header-image">
+          <img src="./assets/images/speaker.JPEG" class="portfolio-header-image">
           </a>
         </div>
 
@@ -115,10 +115,10 @@
                 - PROJECT_PAGE_NAME.html: the html filename for the project (must be in project-pages folder)
           -->
           <div class="project-card">
-            <img src="./assets/images/desktop.jpeg" class="project-image">
+            <img src="./assets/images/laparoscopiX.png" class="project-image">
             <div class="project-card-text-container">
               <div class="subheader-text project-title">ARISE: Surgical Education</div>
-              <div class="body-text project-card-text">ARISE is a non-profit start-up that I co-founded to revolutionize surgical education through our suite of surgical training products, LaparoscopiX. Through scalable simulation and an AI mentor-based platform ARISE provides fundamental skills acquisition to expert-level training for surgical trainees.</div>
+              <div class="body-text project-card-text">ARISE is a non-profit start-up that I co-founded to revolutionize surgical education through our suite of surgical training products, LaparoscopiX.</div>
             </div>
             <a class="button" href="./project-pages/arise.html">
               <span class="button-text">Read More</span>
