aneurysm and ventilator pic updated

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             </a>
           </div>
           <div class="project-card">
-            <img src="./assets/images/code.jpeg" class="project-image">
+            <img src="./assets/images/aneurysm.png" class="project-image">
             <div class="project-card-text-container">
               <div class="subheader-text project-title">Cerebral Aneurysm Occlusion</div>
               <div class="body-text project-card-text">Coming Soon</div>
@@ -137,7 +137,7 @@
             </a>
           </div>
           <div class="project-card">
-            <img src="./assets/images/sketchbook.jpeg" class="project-image">
+            <img src="./assets/images/ventilator.jpg" class="project-image">
             <div class="project-card-text-container">
               <div class="subheader-text project-title">COVID-19: Low-Cost Ventilator</div>
               <div class="body-text project-card-text">Coming Soon</div>
