--- a/project-pages/arise.html
+++ b/project-pages/arise.html
@@ -129,7 +129,7 @@
         This should be the same across all pages.
       -->
       <a class="icon-link" target="_blank" href="https://www.linkedin.com/in/bradenbarlean/">
-        <image src="./assets/icons/linkedin2.svg" class="footer-icon"/>
+        <image src="../assets/icons/linkedin2.svg" class="footer-icon"/>
       </a>
       <!-- 
         TODO - Change href to your Twitter account (can also delete entire "a" element if no Twitter) 
@@ -137,7 +137,7 @@
         This should be the same across all pages.
       -->
       <a class="icon-link" target="_blank" href="https://www.youtube.com/@bradenbarlean">
-        <image src="./assets/icons/youtube2.svg" class="footer-icon"/>
+        <image src="../assets/icons/youtube2.svg" class="footer-icon"/>
       </a>
       <!-- 
         TODO - Change the email after "mailto" to your contact email 
@@ -145,7 +145,7 @@
         This should be the same across all pages.
       -->
       <a class="icon-link" href="https://github.com/Braden5790">
-        <image src="./assets/icons/github2.svg" class="footer-icon"/>
+        <image src="../assets/icons/github2.svg" class="footer-icon"/>
       </a>
     </div>
 
