more arise project updates

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       This should be the same across all pages.
      -->
     <link rel="icon" href="./assets/images/icon.jpg" />
-		<title>Braden Barlean Portfolio</title>
+		<title>Braden Barlean's Portfolio</title>
     <meta name="description" content="Braden's Portfolio">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
