--- a/project-pages/arise.html
+++ b/project-pages/arise.html
@@ -58,7 +58,7 @@
           -->
         <div class="main-title">ARISE: Accelerated, Realistic, Intelligent Simulation for Surgical Education</div>
         <div class="body-text">Through collaboration with local and international stakeholders ARISE was developed as a cutting-edge surgical education platform to build surgical capacity in LMICs.</div>
-        <image class="project-header-image" src="../assets/images/desktop.jpeg">
+        <image class="project-header-image" src="../assets/images/arise_demo_kenya.jpg">
       </div>
 
       <!-- PROJECT DETAILS -->
@@ -106,15 +106,15 @@
                   - IMAGE_CAPTION: to the caption of the image
             -->
             <div class="gallery-image-container half-width">
-              <img src="../assets/images/code.jpeg" class="gallery-image">
+              <img src="../assets/images/laparoscopiX.png" class="gallery-image">
               <span class="image-caption">Give your image a caption. People love context.</span>
             </div>
             <div class="gallery-image-container half-width">
-              <img src="../assets/images/sketchbook.jpeg" class="gallery-image">
+              <img src="../assets/images/sim_box_demo.png" class="gallery-image">
               <span class="image-caption">Give your image a caption. People love context.</span>
             </div>
             <div class="gallery-image-container">
-              <img src="../assets/images/camera.jpeg" class="gallery-image">
+              <img src="../assets/images/Revital_Kenya.jpg" class="gallery-image">
               <span class="image-caption">Give your image a caption. People love context.</span>
             </div>
         </div>
