--- a/project-pages/arise.html
+++ b/project-pages/arise.html
@@ -107,15 +107,15 @@
             -->
             <div class="gallery-image-container half-width">
               <img src="../assets/images/laparoscopiX.png" class="gallery-image">
-              <span class="image-caption">Give your image a caption. People love context.</span>
+              <span class="image-caption">The LaparoscopiX suite of products meets early surgeons at their level of compentency through a comprehensive product line.</span>
             </div>
             <div class="gallery-image-container half-width">
               <img src="../assets/images/sim_box_demo.png" class="gallery-image">
-              <span class="image-caption">Give your image a caption. People love context.</span>
+              <span class="image-caption">In January 2023, the MVP of LaparoscopiX: Fundamentals was deployed in Kenya.</span>
             </div>
             <div class="gallery-image-container">
               <img src="../assets/images/Revital_Kenya.jpg" class="gallery-image">
-              <span class="image-caption">Give your image a caption. People love context.</span>
+              <span class="image-caption">The ARISE team, as well as Johns Hopkins Center for Bioengineering Innovation & Design, met with a local manufacturer in Kenya.</span>
             </div>
         </div>
       </div>
