final first draft of arise project page

--- a/project-pages/arise.html
+++ b/project-pages/arise.html
@@ -69,7 +69,7 @@
         - Add paragraphs using the <div class="body-text"></div> elements in the "project-details-content"
       -->
       <div id="project-details">
-        <div class="subheader-text">Project Details / Background</div>
+        <div class="subheader-text">The ARISE Training Platform</div>
         <div class="project-details-content">
           <div class="body-text">ARISE is a nonprofit organization that aims to improve surgical outcomes in low- and middle-income countries (LMICs) by expanding access to laparoscopic surgery. Laparoscopic surgery is a minimally invasive surgical technique that uses small incisions and a camera to perform procedures, which has been shown to have many benefits over traditional open surgery, including reduced pain, shorter hospital stays, and faster recovery times.</div>
           <div class="body-text">However, laparoscopic surgery is often unavailable in LMICs due to a lack of trained surgeons and inadequate infrastructure. The lack of access to safe surgical care in LMICs is a significant global health issue, resulting in millions of preventable deaths each year. ARISE addresses this issue with a suite of surgical training products called LaparoscopiX. In which scalable simulations and an expert trained AI mentor are utilized to train early surgeons at various levels of competency, from fundamental skills acquisition to expert-level training. The platform provides real-time feedback to trainees through the AI mentor, trained by collaborating with leading surgical experts to establish objective standards for the algorithm. The training platform was developed in collaboration with local and international stakeholders, including leading surgical experts in the US, Canada, and Kenya, to ensure that it meets the highest standards of surgical education.</div>
@@ -111,11 +111,11 @@
             </div>
             <div class="gallery-image-container half-width">
               <img src="../assets/images/sim_box_demo.png" class="gallery-image">
-              <span class="image-caption">In January 2023, the MVP of LaparoscopiX: Fundamentals was deployed in Kenya.</span>
+              <span class="image-caption">In January 2023, the MVP of LaparoscopiX: Fundamentals was deployed in Kenya as a part of a formal usability study.</span>
             </div>
             <div class="gallery-image-container">
               <img src="../assets/images/Revital_Kenya.jpg" class="gallery-image">
-              <span class="image-caption">The ARISE team, as well as Johns Hopkins Center for Bioengineering Innovation & Design, met with a local manufacturer in Kenya.</span>
+              <span class="image-caption">The ARISE team, as well as faculty from the Johns Hopkins Center for Bioengineering Innovation & Design, met with a local manufacturer in Kenya.</span>
             </div>
         </div>
       </div>
