--- a/project-pages/arise.html
+++ b/project-pages/arise.html
@@ -80,7 +80,7 @@
       <!-- IMAGE GALLERY -->
       <div id="project-gallery">
         <!-- TODO - Change the 'subheader-text' to whatever you want the Gallery section header to say -->
-        <div class="subheader-text">A Proven Training Platform</div>
+        <div class="subheader-text">ARISE's Kenyan Deployment</div>
         <div class="project-gallery-content">
             <!-- 
               TODO
