--- a/project-pages/aneurysm.html
+++ b/project-pages/aneurysm.html
@@ -12,9 +12,9 @@
 
       This should be the same across all pages.
      -->
-     <link rel="icon" href="../assets/images/1311.png" />
-     <title>Unemployables Portfolio</title>
-    <meta name="description" content="A portfolio template for the Unemployables community.">
+     <link rel="icon" href="../assets/images/icon.jpg" />
+     <title>Braden's Portfolio</title>
+    <meta name="description" content="Braden's Project: ARISE.">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
 		<link rel="stylesheet" href="../css/layout.css">
@@ -32,13 +32,13 @@
 
           (this should be the same across all pages)
          -->
-        <span class="nav-title">Portfolio Title</span>
+        <span class="nav-title">Braden Barlean</span>
         <!-- 
           TODO - Change the email after 'mailto:' to your email address for contact 
         
           (this should be the same across all pages)
         -->
-        <a class="button" href="mailto:whitevans.eth@gmail.com">
+        <a class="button" href="mailto:bradenbarlean@gmail.com">
           <span class="button-text">Contact Me</span>
         </a>
       </a>
