--- a/project-pages/aneurysm.html
+++ b/project-pages/aneurysm.html
@@ -14,7 +14,7 @@
      -->
      <link rel="icon" href="../assets/images/icon.jpg" />
      <title>Braden's Portfolio</title>
-    <meta name="description" content="Braden's Project: ARISE.">
+    <meta name="description" content="Braden's Project: Aneurysm.">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
 		<link rel="stylesheet" href="../css/layout.css">
