--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
               <div class="subheader-text project-title">Cerebral Aneurysm Occlusion</div>
               <div class="body-text project-card-text">Coming Soon</div>
             </div>
-            <a class="button" href="./project-pages/project-template.html">
+            <a class="button" href="./project-pages/aneurysm.html">
               <span class="button-text">Read More</span>
               <image src="./assets/icons/arrow-right.svg" class="right-arrow-icon"/>
             </a>
@@ -142,7 +142,7 @@
               <div class="subheader-text project-title">COVID-19: Low-Cost Ventilator</div>
               <div class="body-text project-card-text">Coming Soon</div>
             </div>
-            <a class="button" href="./project-pages/project-template.html">
+            <a class="button" href="./project-pages/ventilator.html">
               <span class="button-text">Read More</span>
               <image src="./assets/icons/arrow-right.svg" class="right-arrow-icon"/>
             </a>
