--- a/project-pages/aneurysm.html
+++ b/project-pages/aneurysm.html
@@ -56,9 +56,9 @@
             - Change the 'body-text' text to a short and sweet description of your project (maybe the same as the one on the project card)
             - Change "desktop.jpeg" to the image filename you uploaded in the assets/images folder.
           -->
-        <div class="main-title">Project Name</div>
-        <div class="body-text">A small description about the project goes here, get the reader hooked on the project and tell them why they should continue to read this page. Give it a sweet tagline.</div>
-        <image class="project-header-image" src="../assets/images/desktop.jpeg">
+        <div class="main-title">Endovascular Crosslinking of Pentenoate-FunctionaIized Hyaluronic Acid Hydrogels (PHA) for Occluding Cerebral Aneurysms</div>
+        <div class="body-text">During my undergraduate years, I worked in a regenerative medicine laboratory where I worked with an international student to utilize PHA hydrogels in a novel intravascular method of occluding cerebral aneurysms.</div>
+        <image class="project-header-image" src="../assets/images/PHA.png">
       </div>
 
       <!-- PROJECT DETAILS -->
@@ -105,16 +105,20 @@
                   - IMAGE_CAPTION: to the caption of the image
             -->
             <div class="gallery-image-container half-width">
-              <img src="../assets/images/code.jpeg" class="gallery-image">
-              <span class="image-caption">Give your image a caption. People love context.</span>
+              <img src="../assets/images/aneurysm_team.jpg" class="gallery-image">
+              <span class="image-caption">Pictured is the aneurysm project team consisting of myself and Kéren Fraissard, as well as our advisor Rebecca Scott.</span>
             </div>
             <div class="gallery-image-container half-width">
-              <img src="../assets/images/sketchbook.jpeg" class="gallery-image">
-              <span class="image-caption">Give your image a caption. People love context.</span>
+              <img src="../assets/images/cell_hood.jpg" class="gallery-image">
+              <span class="image-caption">A work day underneath the cell culture hood, where we were synthesizing our PHA hydrogels, and prepping the HUVEC cells for the study.</span>
             </div>
             <div class="gallery-image-container">
-              <img src="../assets/images/camera.jpeg" class="gallery-image">
-              <span class="image-caption">Give your image a caption. People love context.</span>
+              <img src="../assets/images/cells_(live-dead).png" class="gallery-image">
+              <span class="image-caption">Preliminary results from the cell study. (A. Control Group, B. 5 wt% PHA, C. 7.5 wt% PHA, D. 10 wt% PHA).</span>
+            </div>
+            <div class="gallery-image-container half-width">
+              <img src="../assets/images/xray_testing.JPG" class="gallery-image">
+              <span class="image-caption">Preliminary result from the x-ray analysis, where the radiopacity of tantalum powder was tested after being introduced into the PHA hydrogels.</span>
             </div>
         </div>
       </div>
