--- a/project-pages/aneurysm.html
+++ b/project-pages/aneurysm.html
@@ -57,7 +57,7 @@
             - Change "desktop.jpeg" to the image filename you uploaded in the assets/images folder.
           -->
         <div class="main-title">Endovascular Crosslinking of Pentenoate-FunctionaIized Hyaluronic Acid Hydrogels (PHA) for Occluding Cerebral Aneurysms</div>
-        <div class="body-text">During my undergraduate years, I worked in a regenerative medicine laboratory where I worked with an international student to utilize PHA hydrogels in a novel intravascular method of occluding cerebral aneurysms.</div>
+        <div class="body-text">During my undergraduate years, I worked in a regenerative tissue engineering laboratory where I worked with an international student to utilize PHA hydrogels in a novel intravascular method of occluding cerebral aneurysms. Below depicts how this PHA hydrogel would be deployed to heal an aneurysm.</div>
         <image class="project-header-image" src="../assets/images/PHA.png">
       </div>
 
@@ -79,7 +79,7 @@
       <!-- IMAGE GALLERY -->
       <div id="project-gallery">
         <!-- TODO - Change the 'subheader-text' to whatever you want the Gallery section header to say -->
-        <div class="subheader-text">Image Gallery</div>
+        <div class="subheader-text">Research & Fun</div>
         <div class="project-gallery-content">
             <!-- 
               TODO
@@ -108,17 +108,24 @@
               <img src="../assets/images/aneurysm_team.jpg" class="gallery-image">
               <span class="image-caption">Pictured is the aneurysm project team consisting of myself and Kéren Fraissard, as well as our advisor Rebecca Scott.</span>
             </div>
+                        <div class="gallery-image-container half-width">
+              <img src="../assets/images/xray_testing.JPG" class="gallery-image">
+              <span class="image-caption">Preliminary result from the x-ray analysis, where the radiopacity of tantalum powder was tested after being introduced into the PHA hydrogels. The light rectangle is the PHA hydrogel and the white specks are the tantulum powder flakes.</span>
+            </div>
+            <div class="gallery-image-container half-width">
+              <img src="../assets/images/matching.jpg" class="gallery-image">
+              <span class="image-caption">This was a funny day when Kéren and I showed up to the lab matching.</span>
+              <div class="gallery-image-container">
+                <img src="../assets/images/hydrogels.jpg" class="gallery-image">
+                <span class="image-caption">This is what the hydrogels looked like right after they were crosslinked using the 365nm UV light.</span>
+              </div>
             <div class="gallery-image-container half-width">
               <img src="../assets/images/cell_hood.jpg" class="gallery-image">
               <span class="image-caption">A work day underneath the cell culture hood, where we were synthesizing our PHA hydrogels, and prepping the HUVEC cells for the study.</span>
             </div>
             <div class="gallery-image-container">
               <img src="../assets/images/cells_(live-dead).png" class="gallery-image">
-              <span class="image-caption">Preliminary results from the cell study. (A. Control Group, B. 5 wt% PHA, C. 7.5 wt% PHA, D. 10 wt% PHA).</span>
-            </div>
-            <div class="gallery-image-container half-width">
-              <img src="../assets/images/xray_testing.JPG" class="gallery-image">
-              <span class="image-caption">Preliminary result from the x-ray analysis, where the radiopacity of tantalum powder was tested after being introduced into the PHA hydrogels.</span>
+              <span class="image-caption">Preliminary results from the cell study, where cells dyed green are living and cells dyed red are dead. (A. Control Group, B. 5 wt% PHA, C. 7.5 wt% PHA, D. 10 wt% PHA). Through this analysis, it was determined that the 10 wt% PHA hydrogel was too concentrated to support cell proliferation.</span>
             </div>
         </div>
       </div>
