more aneurysm updates & removed some comments

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             <img src="./assets/images/aneurysm.png" class="project-image">
             <div class="project-card-text-container">
               <div class="subheader-text project-title">Cerebral Aneurysm Occlusion</div>
-              <div class="body-text project-card-text">Coming Soon</div>
+              <div class="body-text project-card-text">Using a novel method for occluding cerebral aneurysms using a pentenoate-functionalized hyaluronic acid hydrogel.</div>
             </div>
             <a class="button" href="./project-pages/aneurysm.html">
               <span class="button-text">Read More</span>
