first draft of aneurysm page done!

--- a/project-pages/aneurysm.html
+++ b/project-pages/aneurysm.html
@@ -63,7 +63,7 @@
             </div>
             <div class="gallery-image-container half-width">
               <img src="../assets/images/matching.jpg" class="gallery-image">
-              <span class="image-caption">This was a funny day when Kéren and I showed up to the lab matching.</span>
+              <span class="image-caption">This was a funny day when Kéren and I showed up to the lab matching!</span>
             </div>
             <div class="gallery-image-container">
               <img src="../assets/images/cells_(live-dead).png" class="gallery-image">
