updated aneurysm pics

--- a/project-pages/aneurysm.html
+++ b/project-pages/aneurysm.html
@@ -45,17 +45,9 @@
         <div class="subheader-text">Research & Fun</div>
         <div class="project-gallery-content">
 
-            <div class="gallery-image-container half-width">
+            <div class="gallery-image-container">
               <img src="../assets/images/aneurysm_team.jpg" class="gallery-image">
               <span class="image-caption">Pictured is the aneurysm project team consisting of myself and Kéren Fraissard, as well as our advisor Rebecca Scott.</span>
-            </div>
-            <div class="gallery-image-container half-width">
-              <img src="../assets/images/xray_testing.JPG" class="gallery-image">
-              <span class="image-caption">Preliminary result from the x-ray analysis, where the radiopacity of tantalum powder was tested after being introduced into the PHA hydrogels. The light rectangle is the PHA hydrogel and the white specks are the tantulum powder flakes.</span>
-            </div>
-            <div class="gallery-image-container">
-                <img src="../assets/images/hydrogels.jpg" class="gallery-image">
-                <span class="image-caption">This is what the hydrogels looked like right after they were crosslinked using the 365nm UV light.</span>
             </div>
             <div class="gallery-image-container half-width">
               <img src="../assets/images/cell_hood.jpg" class="gallery-image">
@@ -66,8 +58,27 @@
               <span class="image-caption">This was a funny day when Kéren and I showed up to the lab matching!</span>
             </div>
             <div class="gallery-image-container">
+              <img src="../assets/images/hydrogels.jpg" class="gallery-image">
+              <span class="image-caption">This is what the hydrogels looked like right after they were crosslinked using the 365nm UV light.</span>
+          </div>
+            <div class="gallery-image-container">
               <img src="../assets/images/cells_(live-dead).png" class="gallery-image">
               <span class="image-caption">Preliminary results from the cell study, where cells dyed green are living and cells dyed red are dead. (A. Control Group, B. 5 wt% PHA, C. 7.5 wt% PHA, D. 10 wt% PHA). Through this analysis, it was determined that the 10 wt% PHA hydrogel was too concentrated to support cell proliferation.</span>
+            </div>
+            <div class="gallery-image-container half-width">
+              <img src="../assets/images/lyophilizer.jpg" class="gallery-image">
+              <span class="image-caption">lyo</span>
+            </div>
+            <div class="gallery-image-container half-width">
+              <img src="../assets/images/pha_quantification.jpg" class="gallery-image">
+              <span class="image-caption">scale</span>
+            </div>
+            <div class="gallery-image-container half-width">
+              <img src="../assets/images/xray_testing.JPG" class="gallery-image">
+              <span class="image-caption">Preliminary result from the x-ray analysis, where the radiopacity of tantalum powder was tested after being introduced into the PHA hydrogels. The light rectangle is the PHA hydrogel and the white specks are the tantulum powder flakes.</span>
+              <div class="gallery-image-container half-width">
+                <img src="../assets/images/xray_testing_model.jpg" class="gallery-image">
+                <span class="image-caption">testing apparatus</span>
             </div>
         </div>
       </div>
