trying to finalize aneurysm pics

--- a/project-pages/aneurysm.html
+++ b/project-pages/aneurysm.html
@@ -60,18 +60,18 @@
             <div class="gallery-image-container">
               <img src="../assets/images/hydrogels.jpg" class="gallery-image">
               <span class="image-caption">This is what the hydrogels looked like right after they were crosslinked using the 365nm UV light.</span>
-          </div>
-            <div class="gallery-image-container">
-              <img src="../assets/images/cells_(live-dead).png" class="gallery-image">
-              <span class="image-caption">Preliminary results from the cell study, where cells dyed green are living and cells dyed red are dead. (A. Control Group, B. 5 wt% PHA, C. 7.5 wt% PHA, D. 10 wt% PHA). Through this analysis, it was determined that the 10 wt% PHA hydrogel was too concentrated to support cell proliferation.</span>
             </div>
             <div class="gallery-image-container half-width">
               <img src="../assets/images/lyophilizer.jpg" class="gallery-image">
-              <span class="image-caption">lyo</span>
+              <span class="image-caption">This is a PHA sample being freeze dired on a lyophilizer. In this process, all liquid within the sample is removed as the lyophilizer exposes the sample to near vacuum and below -50°C contitions. </span>
             </div>
             <div class="gallery-image-container half-width">
               <img src="../assets/images/pha_quantification.jpg" class="gallery-image">
-              <span class="image-caption">scale</span>
+              <span class="image-caption">This is the PHA sample from the lyophilizer image after the lyophilization process is completed. Here the mass was measured to be 865.01 mg.</span>
+            </div>
+            <div class="gallery-image-container">
+              <img src="../assets/images/cells_(live-dead).png" class="gallery-image">
+              <span class="image-caption">Preliminary results from the cell study, where cells dyed green are living and cells dyed red are dead. (A. Control Group, B. 5 wt% PHA, C. 7.5 wt% PHA, D. 10 wt% PHA). Through this analysis, it was determined that the 10 wt% PHA hydrogel was too concentrated to support cell proliferation.</span>
             </div>
             <div class="gallery-image-container half-width">
               <img src="../assets/images/xray_testing.JPG" class="gallery-image">
@@ -79,7 +79,7 @@
             </div>
             <div class="gallery-image-container half-width">
                 <img src="../assets/images/x-ray_testing_model.jpg" class="gallery-image">
-                <span class="image-caption">testing apparatus</span>
+                <span class="image-caption">This is the testing apparatus that was used to collect the x-ray images of the PHA hydrogels with tantalum. The components from bottom to top are: x-ray detector, 3D printed PLA hydrogel holding container, ballistic gel simulating soft brain tissue, a 3D printed plate simulating bone tissue, and finally the x-ray emitter.</span>
             </div>
         </div>
       </div>
