--- a/project-pages/aneurysm.html
+++ b/project-pages/aneurysm.html
@@ -34,7 +34,7 @@
       </div>
 
       <div id="project-details">
-        <div class="subheader-text">Project Details / Background</div>
+        <div class="subheader-text">Hydrogel Occlusion</div>
         <div class="project-details-content">
           <div class="body-text">During my undergraduate studies in biomedical engineering, I worked on a project aimed at developing a novel method for occluding cerebral aneurysms. The approach involved using a pentenoate-functionalized hyaluronic acid (PHA) hydrogel, which would be deposited into the aneurysm through a catheter and then crosslinked using a pigtail diode that emitted 365nm UV light. Once crosslinked, the PHA hydrogel would occlude the aneurysm and promote healing of the cell wall. We also introduced tantalum powder as a radiopaque substrate to enable x-ray analysis and confirm the location of the hydrogel within the cerebral vessels.</div>
           <div class="body-text">Throughout the project, I performed rheological assessments, x-ray analysis, and flow rate analyses to evaluate the properties of the PHA hydrogel and ensure its efficacy in occluding the aneurysm. Additionally, we conducted cell culture studies to assess the cytotoxicity of the hydrogel using live/dead assays and DNA quantification assays. Our team, which consisted of an international master's student from France, two PhD professors, and one post-doctoral student, collaborated closely to develop and refine the project. Our efforts culminated in a successful presentation of our findings at our institution's undergraduate research day, where we were honored to receive the 1st place prize in the biomedical engineering track.</div>
