added the 4th footer to project pages

--- a/project-pages/ventilator.html
+++ b/project-pages/ventilator.html
@@ -138,6 +138,9 @@
       <a class="icon-link" target="_blank" href="https://www.youtube.com/@bradenbarlean">
         <image src="../assets/icons/youtube2.svg" class="footer-icon"/>
       </a>
+      <a class="icon-link" target="_blank" href="https://www.instagram.com/bradens3dprints/">
+        <image src="./assets/icons/instagram.svg" class="footer-icon"/>
+      </a>
       <!-- 
         TODO - Change the email after "mailto" to your contact email 
       
