--- a/project-pages/aneurysm.html
+++ b/project-pages/aneurysm.html
@@ -92,6 +92,9 @@
       <a class="icon-link" target="_blank" href="https://www.youtube.com/@bradenbarlean">
         <image src="../assets/icons/youtube2.svg" class="footer-icon"/>
       </a>
+      <a class="icon-link" target="_blank" href="https://www.instagram.com/bradens3dprints/">
+        <image src="./assets/icons/instagram.svg" class="footer-icon"/>
+      </a>
       <a class="icon-link" href="https://github.com/Braden5790">
         <image src="../assets/icons/github2.svg" class="footer-icon"/>
       </a>
