updated ventilator images

--- a/project-pages/ventilator.html
+++ b/project-pages/ventilator.html
@@ -56,9 +56,9 @@
             - Change the 'body-text' text to a short and sweet description of your project (maybe the same as the one on the project card)
             - Change "desktop.jpeg" to the image filename you uploaded in the assets/images folder.
           -->
-        <div class="main-title">Project Name</div>
+        <div class="main-title">COVID-19 Emergency Response: Low-Cost Ventilator Design</div>
         <div class="body-text">A small description about the project goes here, get the reader hooked on the project and tell them why they should continue to read this page. Give it a sweet tagline.</div>
-        <image class="project-header-image" src="../assets/images/desktop.jpeg">
+        <image class="project-header-image" src="../assets/images/full_vent.jpg">
       </div>
 
       <!-- PROJECT DETAILS -->
@@ -79,7 +79,7 @@
       <!-- IMAGE GALLERY -->
       <div id="project-gallery">
         <!-- TODO - Change the 'subheader-text' to whatever you want the Gallery section header to say -->
-        <div class="subheader-text">Image Gallery</div>
+        <div class="subheader-text">Rapid Prototyping</div>
         <div class="project-gallery-content">
             <!-- 
               TODO
@@ -104,17 +104,33 @@
                   - IMAGE_NAME: the name of the image file in assets/images
                   - IMAGE_CAPTION: to the caption of the image
             -->
-            <div class="gallery-image-container half-width">
-              <img src="../assets/images/code.jpeg" class="gallery-image">
-              <span class="image-caption">Give your image a caption. People love context.</span>
+            <div class="gallery-image-container">
+              <img src="../assets/images/v1_planning.jpg" class="gallery-image">
+              <span class="image-caption">v1 planning</span>
             </div>
             <div class="gallery-image-container half-width">
-              <img src="../assets/images/sketchbook.jpeg" class="gallery-image">
-              <span class="image-caption">Give your image a caption. People love context.</span>
+              <img src="../assets/images/v1_inlet.jpg" class="gallery-image">
+              <span class="image-caption">v1 inlet</span>
+            </div>
+            <div class="gallery-image-container half-width">
+              <img src="../assets/images/v1.jpg" class="gallery-image">
+              <span class="image-caption">v1</span>
             </div>
             <div class="gallery-image-container">
-              <img src="../assets/images/camera.jpeg" class="gallery-image">
-              <span class="image-caption">Give your image a caption. People love context.</span>
+              <img src="../assets/images/final_electronics.jpg" class="gallery-image">
+              <span class="image-caption">final electronics</span>
+            </div>
+            <div class="gallery-image-container half-width">
+              <img src="../assets/images/project_planning1.jpg" class="gallery-image">
+              <span class="image-caption">project planning 1</span>
+            </div>
+            <div class="gallery-image-container half-width">
+              <img src="../assets/images/project_planning2.jpg" class="gallery-image">
+              <span class="image-caption">project planning 2</span>
+            </div>
+            <div class="gallery-image-container half-width">
+              <img src="../assets/images/full_vent.jpg" class="gallery-image">
+              <span class="image-caption">full ventilator</span>
             </div>
         </div>
       </div>
@@ -139,7 +155,7 @@
         <image src="../assets/icons/youtube2.svg" class="footer-icon"/>
       </a>
       <a class="icon-link" target="_blank" href="https://www.instagram.com/bradens3dprints/">
-        <image src="./assets/icons/instagram.svg" class="footer-icon"/>
+        <image src="../assets/icons/instagram.svg" class="footer-icon"/>
       </a>
       <!-- 
         TODO - Change the email after "mailto" to your contact email 
