--- a/project-pages/arise.html
+++ b/project-pages/arise.html
@@ -74,7 +74,7 @@
         <image src="../assets/icons/youtube2.svg" class="footer-icon"/>
       </a>
       <a class="icon-link" target="_blank" href="https://www.instagram.com/bradens3dprints/">
-        <image src="./assets/icons/instagram.svg" class="footer-icon"/>
+        <image src="../assets/icons/instagram.svg" class="footer-icon"/>
       </a>
       <a class="icon-link" href="https://github.com/Braden5790">
         <image src="../assets/icons/github2.svg" class="footer-icon"/>
