even more vent images

--- a/project-pages/ventilator.html
+++ b/project-pages/ventilator.html
@@ -116,9 +116,17 @@
               <img src="../assets/images/v1.jpg" class="gallery-image">
               <span class="image-caption">v1</span>
             </div>
-            <div class="gallery-image-container">
+            <div class="gallery-image-container half-width">
+              <img src="../assets/images/diy_peep.jpg" class="gallery-image">
+              <span class="image-caption">diy peep valve</span>
+            </div>
+            <div class="gallery-image-container half-width">
               <img src="../assets/images/peep.jpg" class="gallery-image">
               <span class="image-caption">peep valve</span>
+            </div>
+            <div class="gallery-image-container">
+              <img src="../assets/images/final_electronics.jpg" class="gallery-image">
+              <span class="image-caption">final electronics</span>
             </div>
             <div class="gallery-image-container half-width">
               <img src="../assets/images/project_planning1.jpg" class="gallery-image">
@@ -127,10 +135,6 @@
             <div class="gallery-image-container half-width">
               <img src="../assets/images/project_planning2.jpg" class="gallery-image">
               <span class="image-caption">project planning 2</span>
-            </div>
-            <div class="gallery-image-container">
-              <img src="../assets/images/final_electronics.jpg" class="gallery-image">
-              <span class="image-caption">final electronics</span>
             </div>
         </div>
       </div>
