--- a/project-pages/ventilator.html
+++ b/project-pages/ventilator.html
@@ -32,7 +32,7 @@
       <div id="project-header">
 
         <div class="main-title">COVID-19 Emergency Response: Low-Cost Ventilator Design</div>
-        <div class="body-text">A small description about the project goes here, get the reader hooked on the project and tell them why they should continue to read this page. Give it a sweet tagline.</div>
+        <div class="body-text">The project aimed to engineer a low-cost, DIY ventilator using off-the-shelf components from local supply stores to address the shortage of ventilators in low-resource hospitals or hospitals running out of ventilators during the COVID-19 pandemic.</div>
         <image class="project-header-image" src="../assets/images/full_vent.jpg">
       </div>
 
