--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
             <img src="./assets/images/ventilator.jpg" class="project-image">
             <div class="project-card-text-container">
               <div class="subheader-text project-title">COVID-19: Low-Cost Ventilator</div>
-              <div class="body-text project-card-text">To address the shortage of ventilators during the COVID-19 pandemic, a low-cost, DIY ventilator was developed using off-the-shelf components from local supply stores.</div>
+              <div class="body-text project-card-text">To address the initial shortage of ventilators during the COVID-19 pandemic, a low-cost, DIY ventilator was developed using off-the-shelf components from local supply stores.</div>
             </div>
             <a class="button" href="./project-pages/ventilator.html">
               <span class="button-text">Read More</span>
